bug 808803: Tweaks to correct view of overlapping events in calendar week view

--- a/apps/calendar/style/week_view.css
+++ b/apps/calendar/style/week_view.css
@@ -101,14 +101,16 @@
   margin: 1px;
   height: 6rem;
   width: 7rem;
-}
-
-#week-view .week-events > ol {
-  width: 7rem;
+  position: relative;
 }
 
 #week-view .days-3 .week-events > ol {
   width: 9.5rem;
+}
+
+#week-view .week-events > ol li.event {
+    position: absolute;
+    width: 100%;
 }
 
 #week-view .week-events .container {
